Integrated PostCSS & BrowserSync & Completed Desktop Version of Large Hero - next responsive design

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,7 +1,5 @@
-body {
-
-}
-
-img{
-  max-width: 100%;
-}
+@import "normalize.css";
+@import "base/_variables";
+@import "base/_global";
+@import "modules/_large-hero";
+@import "modules/_btn";
