--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -15,28 +15,41 @@
   }
 
   &__title{
-    font-size: 4.8rem;
+    font-size: 2.8rem;
     color: $mainBlue;
     font-weight: 300;
     margin-bottom: 0;
+
+    @mixin atSmall{
+      font-size: 4.8rem;
+    }
   }
 
   &__subtitle{
-    font-size: 2.9rem;
+    font-size: 1.9rem;
     font-weight: 300;
     color: $mainBlue;
     margin-top: 0;
     margin-bottom: .5rem;
+
+    @mixin atSmall{
+      font-size: 2.9rem;
+    }
   }
 
   &__description{
-    font-size: 1.875rem;
-    max-width: 30rem;
+    font-size: 1.2rem;
+    max-width: 18rem;
     color: #fff;
     font-weight: 100;
     margin-top: .5rem;
     margin-left: auto;
     margin-right: auto;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.2);
+
+    @mixin atSmall{
+      font-size: 1.875rem;
+      max-width: 30rem;
+    }
   }
 }
