--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -3,3 +3,23 @@
     @mixin-content;
   }
 }
+
+@define-mixin atMedium{
+  @media (min-width: 768px){
+    @mixin-content;
+  }
+}
+
+@define-mixin atLarge{
+  @media (min-width: 992px){
+    @mixin-content;
+  }
+}
+
+@define-mixin clearfix{
+  &::after{
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
