--- a/app/assets/styles/modules/_container.css
+++ b/app/assets/styles/modules/_container.css
@@ -6,11 +6,26 @@
   margin-left: auto;
   margin-right: auto;
 
+  .container{
+    padding-left: 0;
+    padding-right: 0;
+
+    @mixin atMedium{
+      padding-left: 18px;
+      padding-right: 18px;
+    }
+  }
+
   &--medium{
     max-width: 970px;
   }
 
   &--mb-small{
-    margin-bottom: 3.875em;
+    margin-bottom: 1.2em;
+
+    @mixin atMedium{
+      margin-bottom: 3.875em;
+    }
   }
+
 }
