--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,6 +2,10 @@
 
   @mixin clearfix;
 
+  &--gutters{
+    margin-right: -65px;
+  }
+
   &--gutters > div{
     padding-right: 65px;
   }
@@ -10,12 +14,28 @@
   @mixin atMedium{
     &__medium-4{
       float: left;
+      width: 33.33%;
+    }
+
+    &__medium-4--larger{
       width: 37%;
     }
 
     &__medium-8{
       float: left;
+      width: 66.66%;
+    }
+
+    &__medium-8--smaller{
       width: 63%;
+    }
+  }
+
+  &--mb-until-medium{
+    margin-bottom: 1em;
+
+    @mixin atMedium{
+      margin-bottom: 0;
     }
   }
 }
