Completed Our Features Desktop Version

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -9,3 +9,5 @@
 @import "modules/_heading";
 @import "modules/_row";
 @import "modules/_generic-container";
+@import "modules/_features";
+@import "modules/_section-title";
