--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -10,6 +10,14 @@
     padding-right: 65px;
   }
 
+  &--gutters-larger{
+    margin-right: -100px;
+  }
+
+  &--gutters-larger > div{
+    padding-right: 100px;
+  }
+
   /* Mixin Medium */
   @mixin atMedium{
     &__medium-4{
@@ -19,6 +27,11 @@
 
     &__medium-4--larger{
       width: 37%;
+    }
+
+    &__medium-6{
+      width: 50%;
+      float: left;
     }
 
     &__medium-8{
