--- a/app/assets/styles/modules/_features.css
+++ b/app/assets/styles/modules/_features.css
@@ -1,15 +1,30 @@
 .features{
-  padding-left: 90px;
   position: relative;
   padding-bottom: 2.5rem;
 
+  @mixin atMedium{
+    padding-left: 90px;
+  }
+
   &__img{
-    position: absolute;
-    left: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    @mixin atMedium{
+      position: absolute;
+      left: 0;
+    }
   }
 
   &__title{
-    font-size: 1.875rem;
+    text-align: center;
+    font-size: 1.6rem;
     font-weight: 300;
+
+    @mixin atMedium{
+      text-align: left;
+      font-size: 1.875rem;
+    }
   }
 }
