--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -1,12 +1,25 @@
 .section-title{
   text-align: center;
   font-weight: 300;
-  font-size: 3.75rem;
+  font-size: 2.55rem;
+
+  @mixin atMedium{
+    font-size: 3.75rem;
+  }
 
   &__icon{
-    position: relative;
-    padding-right: .6rem;
-    top: 8px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: .7rem;
+
+    @mixin atMedium{
+      position: relative;
+      padding-right: .5rem;
+      top: 8px;
+      margin-bottom: 0;
+      display: inline-block;
+    }
   }
 
   strong{
