--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,3 +11,4 @@
 @import "modules/_generic-container";
 @import "modules/_features";
 @import "modules/_section-title";
+@import "modules/_testimonials";
