--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -5,8 +5,25 @@
     padding: 4.5rem 0;
   }
 
+  &--no-bottom-padding-until-lg{
+    padding-bottom: 0;
+
+    @mixin atLarge{
+      padding-bottom: 4.5rem;
+    }
+  }
+
   &--blue{
     background-color: $mainBlue;
     color: #fff;
+  }
+
+  &--testimonials-bg{
+    background-color: $bgBlue;
+
+    @mixin atLarge{
+      background: url("../../assets/images/testimonials-bg.jpg") no-repeat top center;
+      background-size: cover;
+    }
   }
 }
